Added useContext hook

--- a/CurrentTask/src/Components/Head.css
+++ b/CurrentTask/src/Components/Head.css
@@ -2,6 +2,8 @@
     background-color: #F1F1F1;
     text-align: center;
     padding: 0px;
+    font-size: 30;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   .topnav {
