--- a/CurrentTask/src/index.css
+++ b/CurrentTask/src/index.css
@@ -66,22 +66,19 @@
   padding-left: 12px;
 }
 .cardContainer {
-  /* border: 2px solid green; */
-  height: 120vh;
-  width: 100vw;
-  padding: 5px 12px;
-  display: flex;
-  overflow: hidden;
-  flex-wrap: wrap;
+   padding: 20px;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  
+  
 }
 .card {
-  border: 1px solid black;
-  height: 400px;
-  width: 249px;
-  margin: 0px 4px;
-  box-shadow: 1px 1px 8px black;
-  margin-top: 10px;
   
+  width:200px;
+  margin: 10px auto;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  padding: 14px 10px;
 }
 .size {
   font-size: medium;
@@ -127,5 +124,9 @@ svg:hover {
   align-items: center;
   justify-content: center;
   box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
+}
+.button-addcart{
 
+  display: inline-block;
+  
 }
