--- a/AssetMgmt/src/components/utils/assets/Sidenav.css
+++ b/AssetMgmt/src/components/utils/assets/Sidenav.css
@@ -12,15 +12,16 @@
    }
 
    .tab {
-    float: left;
-    border: 1px solid #ccc;
     background-color: #ccc;
     width: 100%;
-    height: 00px;
+    height: 400px;
+
     
   }
   .tablinks{
     font-size: larger;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .tab button {
