--- a/CurrentTask/src/index.css
+++ b/CurrentTask/src/index.css
@@ -128,5 +128,9 @@ svg:hover {
 .button-addcart{
 
   display: inline-block;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   
 }
